Fix repository name in GitHub Actions workflow for Docker image push

--- a/.github/workflows/pushing-image.yml
+++ b/.github/workflows/pushing-image.yml
@@ -20,7 +20,7 @@ jobs:
           registry: ghcr.io
           username: "thisisfeeder"
           password: ${{ secrets.GHCIO }}
-          repository: mbanq/watchman
+          repository: mbanq/moov-wire
           tags: ${{ env.IMAGE_VERSION }}
           build-args: |
             MOOV_WIRE_VERSION=${{ env.IMAGE_VERSION }}
