--- a/.github/workflows/pushing-image.yml
+++ b/.github/workflows/pushing-image.yml
@@ -22,5 +22,5 @@ jobs:
           password: ${{ secrets.GHCIO }}
           repository: mbanq/moov-wire
           tags: ${{ env.IMAGE_VERSION }}
-          build-args: |
+          build_args: |
             MOOV_WIRE_VERSION=${{ env.IMAGE_VERSION }}
