SRE-6206: Fix incorrect key for build arguments in GitHub Actions workflow

--- a/.github/workflows/pushing-image.yml
+++ b/.github/workflows/pushing-image.yml
@@ -22,5 +22,5 @@ jobs:
           password: ${{ secrets.GHCIO }}
           repository: mbanq/moov-wire
           tags: ${{ env.IMAGE_VERSION }}
-          build_args: |
+          build-args: |
             MOOV_WIRE_VERSION=${{ env.IMAGE_VERSION }}
