--- a/.github/workflows/pushing-image.yml
+++ b/.github/workflows/pushing-image.yml
@@ -14,6 +14,14 @@ jobs:
     steps:
       - name: Build:checkout
         uses: actions/checkout@v2
+      
+      - name: Login:ghcr.io
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: "thisisfeeder"
+          password: ${{ secrets.GHCIO }}
+
       - name: Build:dockerimage
         uses: docker/build-push-action@v3
         with:
