SRE-6206: Update GitHub Actions workflow to include image verification step and set default MOOV_WIRE_VERSION in Dockerfile

--- a/.github/workflows/pushing-image.yml
+++ b/.github/workflows/pushing-image.yml
@@ -32,3 +32,7 @@ jobs:
           tags: ${{ env.IMAGE_VERSION }}
           build-args: |
             "MOOV_WIRE_VERSION=${{ env.IMAGE_VERSION }}"
+      
+      - name: Verify:image
+        run: |
+          docker run --rm ghcr.io/mbanq/moov-wire:${{ env.IMAGE_VERSION }} /moov/wire --version
