SRE-6206: Refactor GitHub Actions workflow to use dynamic username and token for ghcr.io login

--- a/.github/workflows/pushing-image.yml
+++ b/.github/workflows/pushing-image.yml
@@ -19,15 +19,15 @@ jobs:
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
-          username: "thisisfeeder"
-          password: ${{ secrets.GHCIO }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build:dockerimage
         uses: docker/build-push-action@v3
         with:
           registry: ghcr.io
-          username: "thisisfeeder"
-          password: ${{ secrets.GHCIO }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
           repository: mbanq/moov-wire
           tags: ${{ env.IMAGE_VERSION }}
           build-args: |
