SRE-6206: Ensure image is pushed to GHCR.IO in GitHub Actions workflow

--- a/.github/workflows/pushing-image.yml
+++ b/.github/workflows/pushing-image.yml
@@ -30,6 +30,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
           repository: mbanq/moov-wire
           tags: ${{ env.IMAGE_VERSION }}
+          push: true
           build-args: |
             "MOOV_WIRE_VERSION=${{ env.IMAGE_VERSION }}"
 
