SRE-6206: Update GitHub Actions workflow to use static username and password for ghcr.io login

--- a/.github/workflows/pushing-image.yml
+++ b/.github/workflows/pushing-image.yml
@@ -19,15 +19,15 @@ jobs:
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: "thisisfeeder"
+          password: ${{ secrets.GHCIO }}
 
       - name: Build:dockerimage
         uses: docker/build-push-action@v3
         with:
           registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: "thisisfeeder"
+          password: ${{ secrets.GHCIO }}
           repository: mbanq/moov-wire
           tags: ${{ env.IMAGE_VERSION }}
           push: true
