--- a/.github/workflows/pushing-image.yml
+++ b/.github/workflows/pushing-image.yml
@@ -26,8 +26,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: .
-          tags: mbanq/moov-wire:${{ env.IMAGE_VERSION }}
+          tags: ghcr.io/mbanq/moov-wire:${{ env.IMAGE_VERSION }}
           push: true
           build-args: |
             "MOOV_WIRE_VERSION=${{ env.IMAGE_VERSION }}"
-
